incluindo Spring boot admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ jwt.secret=jwtdio
 
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
+
+spring.boot.admin.client.url=http://localhost:8081
