--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 			<version>0.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.4.3</version>
+		</dependency>
+
 
 	</dependencies>
 
